--- a/Lab 7 (Javajam9)/javajam.css
+++ b/Lab 7 (Javajam9)/javajam.css
@@ -161,25 +161,25 @@ label {
 
 #heroroad {
     background-size: 100% 100%;
-    background-image: url(image/heroroad.jpg);
+    background-image: url(Image/heroroad.jpg);
     height: 250px;
 }
 
 #heromugs {
     background-size: 100% 100%;
-    background-image: url(image/heromugs.jpg);
+    background-image: url(Image/heromugs.jpg);
     height: 250px;
 }
 
 #heroguitar {
     background-size: 100% 100%;
-    background-image: url(image/heroguitar.jpg);
+    background-image: url(Image/heroguitar.jpg);
     height: 250px;
 }
 
 #herojobs {
     height: 250px;
-    background-image: url(image/herojobs.jpg);
+    background-image: url(Image/herojobs.jpg);
     background-size: 100% 100%;
 }
 
